--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
    "compilerOptions": {
      "lib": [ "esnext", "dom" ],
      "target": "esnext",
-     "module": "commonjs",
+     "module": "esnext",
      "moduleResolution": "node",
      "experimentalDecorators": true,
      "emitDecoratorMetadata": true,
