--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "watch": "webpack --watch ./src",
+    "watch": "webpack --watch",
     "build": "webpack --mode production"
   },
   "repository": "git@github.com:litencatt/paste-string-filter.git",
