--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
   "name": "paste-string-filter",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "watch": "webpack --watch",
-    "build": "webpack --mode production"
+    "clean": "rm -rf dist; mkdir dist; touch ./dist/.keep",
+    "watch": "yarn run clean && vite build --watch",
+    "build": "yarn run clean && vite build",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "repository": "git@github.com:litencatt/paste-string-filter.git",
   "author": "litencatt <ncl0709@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-typescript": "^7.14.5",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.11",
+    "@tsconfig/svelte": "^2.0.1",
     "@types/chrome": "^0.0.145",
     "@types/node": "^16.0.0",
-    "babel-loader": "^8.2.2",
+    "@types/prettier": "^2.3.1",
     "prettier": "^2.3.2",
+    "svelte": "^3.38.3",
+    "svelte-check": "^2.2.0",
+    "svelte-preprocess": "^4.7.3",
+    "tslib": "^2.3.0",
     "typescript": "^4.3.5",
-    "webpack": "^5.42.0",
-    "webpack-cli": "^4.7.2"
+    "vite": "^2.4.1"
   }
 }
