--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,13 @@
   "trailingComma": "all",
   "semi": false,
   "arrowParens": "always",
-  "parser": "typescript"
+  "parser": "typescript",
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ]
 }
