--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@types/chrome": "^0.0.145",
     "@types/node": "^16.0.0",
     "@types/prettier": "^2.3.1",
+    "autoprefixer": "^10.3.1",
+    "postcss": "^8.3.5",
     "prettier": "^2.3.2",
     "svelte": "^3.38.3",
     "svelte-check": "^2.2.0",
     "svelte-preprocess": "^4.7.3",
+    "tailwindcss": "^2.2.4",
     "tslib": "^2.3.0",
     "typescript": "^4.3.5",
     "vite": "^2.4.1"
