--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
+    "noImplicitAny": true,
     "baseUrl": ".",
     "strict": true,
     "allowJs": true,
