--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "litencatt <ncl0709@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@emotion/css": "^11.1.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.27",
     "@tsconfig/svelte": "^2.0.1",
     "@types/chrome": "^0.0.159",
