--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@types/chrome": "^0.0.159",
     "@types/node": "^16.10.3",
     "@types/prettier": "^2.4.1",
-    "autoprefixer": "^10.3.7",
     "postcss": "^8.3.9",
     "prettier": "^2.3.2",
     "svelte": "^3.43.1",
     "svelte-check": "^2.2.7",
+    "svelte-material-ui": "^5.0.0-beta.7",
     "svelte-preprocess": "^4.9.8",
     "tailwindcss": "^2.2.16",
     "tslib": "^2.3.1",
