--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "paste-string-filter",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "manifest_version": 3,
   "description": "Filter pasting string with your Regexps.",
   "permissions": ["storage"],
@@ -16,6 +16,9 @@
       "js": ["loader.js"]
     }
   ],
+  "background": {
+    "service_worker": "bg.js"
+  },
   "web_accessible_resources": [
     {
       "matches": [
